# silverfox

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
src/: account.rs  amount.rs  entry.rs  envelope.rs  errors.rs  flags.rs  importer.rs  ledger.rs  main.rs  posting.rs  utils.rs
src/account/: builder.rs  mod.rs
src/builders/: mod.rs
src/entry/: builder.rs  mod.rs
src/envelope/: builder.rs  mod.rs
src/ledger/: account.rs  amount.rs  builder.rs  entry.rs  envelope.rs  errors.rs  mod.rs  posting.rs  register.rs
src/parsing/: amount.rs  common.rs  entry.rs  envelope.rs  mod.rs  posting.rs
