[package]
name = "silverfox"
version = "0.1.0"
authors = ["municorn <municorn@musicaloft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
chrono = "0.4.10"
csv = "1.1"
console = "0.12.0"                    # A terminal and console abstraction for Rust
terminal_size = "0.1.13"           # Gets the size of your Linux or Windows terminal
